Fix rule item text alignment

--- a/css/options.css
+++ b/css/options.css
@@ -57,16 +57,13 @@ section {
     align-items: center;
     gap: 15px;
 }
-.item-view label {
+.item-view .item-details {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 2px;
     flex-grow: 1;
-}
-.item-view .item-details {
     cursor: pointer;
-    flex-grow: 1;
 }
 .item-details { flex-grow: 1; }
 .item-main { display: block; font-weight: 600; font-size: 1.05em; }
